--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.3",
+    "clsx": "^2.1.1",
     "next": "15.5.4",
     "prisma": "^6.16.3",
     "react": "19.1.0",
