--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.3",
-    "next": "15.5.4",
+    "next": "^15.5.4",
     "prisma": "^6.16.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.19",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
