--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "next": "^15.5.4",
     "prisma": "^6.16.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
     "clsx": "^2.1.1",
     "next": "15.5.4",
     "prisma": "^6.16.3",
