[add]APIとフロントの紐付け

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "seed": "node --loader ts-node/esm prisma/seed.mts"
   },
   "dependencies": {
     "@prisma/client": "^6.16.3",
