[add]全体マップの作成

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prisma": "^6.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
