--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --hostname 0.0.0.0",
+        "postinstall": "prisma generate",
+    "dev": "prisma generate && next dev -H 0.0.0.0 -p 3000",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
